[package]
name = "route-optimizer"
version = "0.1.3"
authors = ["ParkSnoopy <117149837+ParkSnoopy@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0"

[dependencies]
ansi-escapes = "0.2.0"
nu-ansi-term = "0.50.1"
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
itertools = "0.13.0"
reqwest = { version = "0.12.9", features = ["cookies", "default-tls"] }
scraper = "0.21.0"
term_size = "0.3.2"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
supports-hyperlinks = "3.0.0"
factorial = "0.4.0"

[target."cfg(windows)".dependencies]
enable-ansi-support = "0.2.1"

[build-dependencies]
anyhow = "1.0.92"

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"
