[package]
name = "route-optimizer-core"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["ParkSnoopy <117149837+ParkSnoopy@users.noreply.github.com>"]

[profile.release]
panic = "abort"
strip = true
lto   = true

[dependencies]
color-eyre = "0.6.3"
crossbeam = "0.8.4"
derive_more = { version = "1.0.0", features = ["into_iterator"] }
factorial = "0.4.0"
futures-executor = "0.3.31"
itertools = "0.13.0"
rayon = "1.10.0"
scraper = { version = "0.21.0", default-features = false }
simple-concurrent-get = "0.3.1"
